--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,4 +1,8 @@
 /* ---------- RESET SIMPLE ---------- */
+body{
+  padding-top: env(safe-area-inset-top);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
