--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,7 +1,5 @@
 /* ---------- RESET SIMPLE ---------- */
-body{
-  padding-top: env(safe-area-inset-top);
-}
+
 
 * {
   box-sizing: border-box;
@@ -9,16 +7,18 @@ body{
   padding: 0;
 }
 
- body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
-    sans-serif;
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text", sans-serif;
   background: #e9edf3;
   min-height: 100vh;
+
   display: flex;
-  align-items: center;
-  justify-content: center;
-  /* sin overflow hidden */
+  align-items: stretch;
+  justify-content: flex-start;
+
+  padding-top: env(safe-area-inset-top);
 }
+
 
 
 /* ---------- CONTENEDOR PRINCIPAL ---------- */
