--- a/frontend/style.css
+++ b/frontend/style.css
@@ -378,7 +378,9 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 9999;
+  z-index: 9999;padding-bottom: 90px;
+scroll-padding-bottom: 90px;
+
 }
 
   }
