remove scroll in page

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -348,7 +348,17 @@ body {
 /* =========================
    RESPONSIVE MÓVIL (UN SOLO BLOQUE)
    ========================= */
-@media (max-width: 768px) {
+@media (max-width: 768px) {  html, body{
+    height: 100%;
+    overflow: hidden;
+  }
+
+  body{
+    position: fixed;
+    inset: 0;
+    width: 100%;
+  }
+
 
   body {
     background: #ffffff;
