--- a/frontend/style.css
+++ b/frontend/style.css
@@ -348,6 +348,10 @@ body {
 /* =========================
    RESPONSIVE MÓVIL (UN SOLO BLOQUE)
    ========================= */
+   html { outline: 6px solid red !important; }
+body { outline: 6px solid blue !important; }
+.app  { outline: 6px solid lime !important; }
+
 @media (max-width: 768px) {  html, body{
     height: 100%;
     overflow: hidden;
