--- a/frontend/style.css
+++ b/frontend/style.css
@@ -355,7 +355,10 @@ body {
     html, body{
     height: 100%;
     overflow: hidden;
-    overscroll-behavior: none;
+    overscroll-behavior: none;.messages{
+  touch-action: pan-y;
+}
+
   }
 
   body{
